[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"

[dev-dependencies]

mollusk-svm = { path = "/Users/singupallikartik/Developer/pinocchio-contract/mollusk/harness" }

[lib]
crate-type = ["lib", "cdylib"]