[package]
name = "Quantum-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
solana-nostd-sha256 = "0.1.3"
solana-winternitz = "0.1.1"



[lib]
crate-type = ["lib", "cdylib"]

[features]
test-sbf = []
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]